--- a/PomodoroTimer/PomodoroTimer/PomodoroTimer.csproj
+++ b/PomodoroTimer/PomodoroTimer/PomodoroTimer.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>resources\pomodoro.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="resources\pomodoro.ico" />
+  </ItemGroup>
 
 </Project>
